feat(api_key): support api key management support api key management by openapi and mcp close #1 sync data and openapi schema file (openapi.yaml) close #3
